<resources>
    <string name="app_name">Notepad</string>
    <string name="no_notes">No Notes Yet</string>
    <string name="action_settings">Vista previa</string>

    // Opciones generales PRUEBAS
    <string name="caja_negra">Prueba de caja negra</string>
    <string name="prueba_volumen">Prueba de volumen</string>
    <string name="prueba_volumen_fin">Prueba de volumen fin</string>
    <string name="prueba_sobrecarga">Prueba de sobrecarga</string>

    // Opciones de una nota
    <string name="menu_note_delete">Eliminar nota</string>
    <string name="menu_note_edit">Editar nota</string>
    <string name="menu_note_send_mail">Enviar por email</string>
    <string name="menu_note_send_sms">Enviar por SMS</string>

    // Opciones de una categoría
    <string name="menu_cat_delete">Eliminar categoría</string>
    <string name="menu_cat_edit">Editar categoría</string>

    // Vista 'Editar nota'
    <string name="title_activity_note_edit">EditNote</string>
    <string name="ID_note">ID</string>
    <string name="title">Título</string>
    <string name="body">Cuerpo</string>
    <string name="category">Categoría</string>
    <string name="confirm">Confirmar</string>
    <string name="discard">Cancelar</string>
    <string name="edit_note">Editar nota</string>
    <string name="create_note">Crear nota</string>

    // Vista 'Editar categoría'
    <string name="title_activity_cat_edit">EditCategory</string>
    <string name="ID_cat">ID</string>
    <string name="title_cat">Título</string>
    <string name="edit_cat">Editar categoría</string>
    <string name="create_cat">Crear categoría</string>
</resources>
